--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+
+    <!-- 파비콘 -->
+    <link rel="icon" href="/src/assets/favicon.ico" sizes="any">
+    <link rel="icon" href="/src/assets/favicon.svg" type="image/svg+xml">
+    <meta name="theme-color" content="#000000">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>방플릭스</title>
   </head>
   <body>
     <div id="app"></div>
